Initial commit - added contact and about pages with full styling

--- a/about.html
+++ b/about.html
@@ -4,24 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Beyond Systems</title>
+    <link rel="icon" type="image/jpeg" href="assets/images/Logo.jpeg">
+    <link rel="apple-touch-icon" href="assets/images/Logo.jpeg">
+
+    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;600;700;900&family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
+
+    <!-- Main Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
+
+    <!-- About Page Stylesheet -->
+    <link rel="stylesheet" href="assets/css/about.css">
 </head>
 <body>
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
             <div class="logo-section">
-                <div>
-                    <div class="logo">BEYOND SYSTEMS</div>
-                    <div class="tagline">Innovative Reliable Solutions</div>
-                </div>
+                <img src="assets/images/Logo.jpeg" alt="Beyond Systems Logo" class="logo-img">
+                <div class="tagline">Innovative Reliable Solutions</div>
             </div>
+            <div id="hamburger" class="hamburger">&#9776;</div>
             <ul class="nav-menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="index.html#distributors">Distributors</a></li>
                 <li><a href="index.html#products">Products & Services</a></li>
                 <li><a href="index.html#security">Security</a></li>
+                <li><a href="index.html#chemicals">Chemicals</a></li>
+                <li><a href="index.html#it-services">IT Services</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -213,22 +223,24 @@
                     <a href="index.html#security">Cyber Security</a>
                     <a href="index.html#products">Training & Consultancy</a>
                     <a href="index.html#products">Mining Solutions</a>
+                    <a href="index.html#it-services">IT Services</a>
                 </div>
 
                 <div class="footer-section">
                     <h4>Contact Info</h4>
-                    <p>Lusaka, Zambia</p>
-                    <a href="mailto:info@beyondsystems.co.zm">info@beyondsystems.co.zm</a>
-                    <a href="tel:+260">+260 XXX XXX XXX</a>
+                    <p>Solwezi, Zambia</p>
+                    <a href="mailto:info@beyondsystems.com">info@beyondsystems.com</a>
+                    <a href="tel:+260975913592">+260 975 913 592</a>
                 </div>
             </div>
-
-            <div class="copyright">
-                <p>&copy; 2026 Beyond Systems. All rights reserved. | Genuine Products. Local Support. Mining Solutions.</p>
-            </div>
+        </div>
+        <div class="copyright">
+            <p>&copy; 2026 Beyond Systems. All rights reserved. | Genuine Products. Local Expertise.</p>
         </div>
     </footer>
 
-    <script src="assets/js/main.js"></script>
+    <!-- JavaScript -->
+    <script type="module" src="assets/js/main.js"></script>
+    <script type="module" src="assets/js/about.js"></script>
 </body>
 </html>
