--- a/contact.html
+++ b/contact.html
@@ -4,24 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - Beyond Systems</title>
+    <link rel="icon" type="image/jpeg" href="assets/images/Logo.jpeg">
+    <link rel="apple-touch-icon" href="assets/images/Logo.jpeg">
+
+    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;600;700;900&family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
+
+    <!-- Main Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
+
+    <!-- Contact Page Stylesheet -->
+    <link rel="stylesheet" href="assets/css/contact.css">
 </head>
 <body>
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
             <div class="logo-section">
-                <div>
-                    <div class="logo">BEYOND SYSTEMS</div>
-                    <div class="tagline">Innovative Reliable Solutions</div>
-                </div>
+                <img src="assets/images/Logo.jpeg" alt="Beyond Systems Logo" class="logo-img">
+                <div class="tagline">Innovative Reliable Solutions</div>
             </div>
+            <div id="hamburger" class="hamburger">&#9776;</div>
             <ul class="nav-menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="index.html#distributors">Distributors</a></li>
                 <li><a href="index.html#products">Products & Services</a></li>
                 <li><a href="index.html#security">Security</a></li>
+                <li><a href="index.html#chemicals">Chemicals</a></li>
+                <li><a href="index.html#it-services">IT Services</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -58,7 +68,7 @@
 
                         <div class="form-group">
                             <label for="phone">Phone Number</label>
-                            <input type="tel" id="phone" name="phone" placeholder="+260 XXX XXX XXX">
+                            <input type="tel" id="phone" name="phone" placeholder="+260 975 913 592">
                         </div>
 
                         <div class="form-group">
@@ -100,7 +110,7 @@
                             <div class="detail-icon">📧</div>
                             <div class="detail-content">
                                 <h4>Email</h4>
-                                <p><a href="mailto:info@beyondsystems.co.zm">info@beyondsystems.co.zm</a></p>
+                                <p><a href="mailto:info@beyondsystems.com">info@beyondsystems.com</a></p>
                             </div>
                         </div>
 
@@ -108,7 +118,7 @@
                             <div class="detail-icon">📞</div>
                             <div class="detail-content">
                                 <h4>Phone</h4>
-                                <p><a href="tel:+260">+260 XXX XXX XXX</a></p>
+                                <p><a href="tel:+260975913592">+260 975 913 592</a></p>
                             </div>
                         </div>
 
@@ -116,7 +126,7 @@
                             <div class="detail-icon">📍</div>
                             <div class="detail-content">
                                 <h4>Office Location</h4>
-                                <p>Lusaka, Zambia</p>
+                                <p>Solwezi, Zambia</p>
                             </div>
                         </div>
 
@@ -147,14 +157,13 @@
         </div>
     </section>
 
-    <!-- Map Section (Placeholder) -->
+    <!-- Map Section -->
     <section class="map-section">
-        <div class="map-placeholder">
-            <div class="map-overlay">
-                <h3>📍 Visit Our Office</h3>
-                <p>Lusaka, Zambia</p>
-                <p class="map-note">Contact us for detailed directions and to schedule a visit</p>
-            </div>
+        <img src="assets/images/map.png" alt="Map to Beyond Systems Office" class="map-image">
+        <div class="map-overlay">
+            <h3>📍 Visit Our Office</h3>
+            <p>Solwezi, Zambia</p>
+            <p class="map-note">Contact us for detailed directions and to schedule a visit</p>
         </div>
     </section>
 
@@ -164,8 +173,8 @@
             <h2>Need Immediate Assistance?</h2>
             <p>Our team is ready to help you with any inquiries about our products and services</p>
             <div class="cta-buttons">
-                <a href="tel:+260" class="cta-button">Call Us Now</a>
-                <a href="mailto:info@beyondsystems.co.zm" class="cta-button secondary">Email Us</a>
+                <a href="tel:+260975913592" class="cta-button">Call Us Now</a>
+                <a href="mailto:info@beyondsystems.com" class="cta-button secondary">Email Us</a>
             </div>
         </div>
     </section>
@@ -197,22 +206,21 @@
                     <a href="index.html#security">Cyber Security</a>
                     <a href="index.html#products">Training & Consultancy</a>
                     <a href="index.html#products">Mining Solutions</a>
+                    <a href="index.html#it-services">IT Services</a>
                 </div>
 
                 <div class="footer-section">
                     <h4>Contact Info</h4>
-                    <p>Lusaka, Zambia</p>
-                    <a href="mailto:info@beyondsystems.co.zm">info@beyondsystems.co.zm</a>
-                    <a href="tel:+260">+260 XXX XXX XXX</a>
+                    <p>Solwezi, Zambia</p>
+                    <a href="mailto:info@beyondsystems.com">info@beyondsystems.com</a>
+                    <a href="tel:+260975913592">+260 975 913 592</a>
                 </div>
-            </div>
-
-            <div class="copyright">
-                <p>&copy; 2026 Beyond Systems. All rights reserved. | Genuine Products. Local Support. Mining Solutions.</p>
             </div>
         </div>
     </footer>
 
-    <script src="assets/js/main.js"></script>
+    <!-- JavaScript -->
+    <script type="module" src="assets/js/main.js"></script>
+    <script type="module" src="assets/js/contact.js"></script>
 </body>
 </html>
