--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beyond Systems - Innovative Reliable Solutions</title>
+    <link rel="icon" type="image/jpeg" href="assets/images/Logo.jpeg">
+    <link rel="apple-touch-icon" href="assets/images/Logo.jpeg">
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;600;700;900&family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -16,10 +18,12 @@
                 <div class="tagline">Innovative Reliable Solutions</div>
             </div>
             <ul class="nav-menu">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#distributors">Distributors</a></li>
-                <li><a href="#products">Products & Services</a></li>
-                <li><a href="#security">Security</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html#distributors">Distributors</a></li>
+                <li><a href="index.html#products">Products & Services</a></li>
+                <li><a href="index.html#security">Security</a></li>
+                <li><a href="index.html#chemicals">Chemicals</a></li>
+                <li><a href="index.html#it-services">IT Services</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -38,7 +42,7 @@
             </p>
             <div class="cta-buttons">
                 <a href="#products" class="cta-button">Explore Services</a>
-                <a href="#contact" class="cta-button secondary">Get In Touch</a>
+                <a href="contact.html" class="cta-button secondary">Get In Touch</a>
             </div>
         </div>
     </section>
@@ -246,6 +250,240 @@
         </div>
     </section>
 
+    <!-- Mining Locations -->
+    <section class="mining-section">
+        <div class="section-container">
+            <div class="section-header">
+                <h2 class="section-title">Serving Mines Across Zambia</h2>
+                <p class="section-subtitle mining-intro">Delivering reliable solutions to major mining operations throughout the country</p>
+            </div>
+
+            <div class="mining-grid">
+                <div class="mining-location">
+                    <h4>Mopani</h4>
+                </div>
+                <div class="mining-location">
+                    <h4>Kansanshi</h4>
+                </div>
+                <div class="mining-location">
+                    <h4>Lumwana</h4>
+                </div>
+                <div class="mining-location">
+                    <h4>Kalumbila</h4>
+                </div>
+                <div class="mining-location">
+                    <h4>And more...</h4>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Industrial Chemicals -->
+    <section id="chemicals" class="chemicals-section">
+        <div class="section-container">
+            <div class="section-header">
+                <h2 class="section-title">Industrial Chemicals for Mineral Processing</h2>
+                <p class="section-subtitle">High-quality reagents and chemicals for mining operations</p>
+            </div>
+
+            <div class="chemicals-intro">
+                <p>We supply a comprehensive range of industrial chemicals essential for mineral processing, 
+                flotation, and extraction operations. All products meet international quality standards and 
+                come with complete analysis certificates.</p>
+            </div>
+
+            <div class="chemicals-grid">
+                <div class="chemical-card">
+                    <div class="chemical-icon">🧪</div>
+                    <h3>Sodium Bicarbonate</h3>
+                    <div class="chemical-specs">
+                        <p><strong>Packaging:</strong> 25 kg bags</p>
+                        <p><strong>Purity:</strong> 99.65% Total Alkali</p>
+                        <p><strong>Applications:</strong> pH control, flotation</p>
+                    </div>
+                </div>
+
+                <div class="chemical-card">
+                    <div class="chemical-icon">⚗️</div>
+                    <h3>Xanthates (Collectors)</h3>
+                    <div class="chemical-specs">
+                        <p><strong>Types:</strong> Sodium & Potassium variants</p>
+                        <p><strong>Forms:</strong> Ethyl, Isopropyl, Amyl, Butyl</p>
+                        <p><strong>Purity:</strong> 90-93% minimum</p>
+                    </div>
+                </div>
+
+                <div class="chemical-card">
+                    <div class="chemical-icon">💧</div>
+                    <h3>Isopropyl Ethyl Thionocarbamate</h3>
+                    <div class="chemical-specs">
+                        <p><strong>Form:</strong> Pale yellow liquid</p>
+                        <p><strong>Purity:</strong> 96.08% minimum</p>
+                        <p><strong>Applications:</strong> Selective flotation</p>
+                    </div>
+                </div>
+
+                <div class="chemical-card">
+                    <div class="chemical-icon">🧫</div>
+                    <h3>Sodium Diisobutyl Dithiophosphate</h3>
+                    <div class="chemical-specs">
+                        <p><strong>Form:</strong> Liquid (yellow to dark brown)</p>
+                        <p><strong>Purity:</strong> 50.87% (49-53% spec)</p>
+                        <p><strong>Applications:</strong> Collector, frother</p>
+                    </div>
+                </div>
+
+                <div class="chemical-card">
+                    <div class="chemical-icon">🔴</div>
+                    <h3>STGA Grade A</h3>
+                    <div class="chemical-specs">
+                        <p><strong>Form:</strong> Purplish-red liquid</p>
+                        <p><strong>Activity:</strong> 12.55% (10-15% range)</p>
+                        <p><strong>Packaging:</strong> 250 kg drums</p>
+                    </div>
+                </div>
+
+                <div class="chemical-card">
+                    <div class="chemical-icon">⚪</div>
+                    <h3>Sodium Metabisulphite</h3>
+                    <div class="chemical-specs">
+                        <p><strong>Purity:</strong> 97% (as Na2S2O5)</p>
+                        <p><strong>Packaging:</strong> 25 kg bags</p>
+                        <p><strong>Applications:</strong> Depressant, preservative</p>
+                    </div>
+                </div>
+
+                <div class="chemical-card">
+                    <div class="chemical-icon">🧂</div>
+                    <h3>Sodium Silicate Powder (SSP23)</h3>
+                    <div class="chemical-specs">
+                        <p><strong>M.R.:</strong> 2.32 (2.30-2.40 spec)</p>
+                        <p><strong>Na2O:</strong> 24.42%, SiO2: 54.87%</p>
+                        <p><strong>Applications:</strong> Dispersant, binder</p>
+                    </div>
+                </div>
+
+                <div class="chemical-card">
+                    <div class="chemical-icon">📋</div>
+                    <h3>Complete Product Range</h3>
+                    <div class="chemical-specs">
+                        <p><strong>12+ Products</strong> in stock</p>
+                        <p><strong>Analysis certificates</strong> provided</p>
+                        <p><strong>Custom quantities</strong> available</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="chemicals-features">
+                <div class="feature-item">
+                    <span class="feature-icon">✓</span>
+                    <p>Complete analysis certificates with every shipment</p>
+                </div>
+                <div class="feature-item">
+                    <span class="feature-icon">✓</span>
+                    <p>International quality standards compliance</p>
+                </div>
+                <div class="feature-item">
+                    <span class="feature-icon">✓</span>
+                    <p>Technical support and application guidance</p>
+                </div>
+                <div class="feature-item">
+                    <span class="feature-icon">✓</span>
+                    <p>Flexible packaging and delivery options</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- IT Services & Solutions -->
+    <section id="it-services" class="it-services-section">
+        <div class="section-container">
+            <div class="section-header">
+                <h2 class="section-title">IT Services & Solutions</h2>
+                <p class="section-subtitle">Comprehensive technology solutions for modern businesses</p>
+            </div>
+
+            <div class="services-intro">
+                <p>We deliver cutting-edge IT solutions including software development, website design, 
+                hardware supply, and enterprise resource planning systems tailored to your business needs.</p>
+            </div>
+
+            <div class="services-grid">
+                <div class="service-card">
+                    <div class="service-icon">💻</div>
+                    <h3>Software Development</h3>
+                    <ul>
+                        <li>Custom software applications</li>
+                        <li>Business automation solutions</li>
+                        <li>Mobile app development</li>
+                        <li>System integration services</li>
+                        <li>Software maintenance & support</li>
+                    </ul>
+                </div>
+
+                <div class="service-card">
+                    <div class="service-icon">🌐</div>
+                    <h3>Website Development</h3>
+                    <ul>
+                        <li>Corporate website design</li>
+                        <li>E-commerce platforms</li>
+                        <li>Responsive web applications</li>
+                        <li>Content management systems</li>
+                        <li>Website hosting & maintenance</li>
+                    </ul>
+                </div>
+
+                <div class="service-card">
+                    <div class="service-icon">🖥️</div>
+                    <h3>Computer Hardware Supply</h3>
+                    <ul>
+                        <li>Desktop computers & laptops</li>
+                        <li>Servers & networking equipment</li>
+                        <li>Printers & scanners</li>
+                        <li>Storage devices & backup solutions</li>
+                        <li>Workstations & peripherals</li>
+                    </ul>
+                </div>
+
+                <div class="service-card">
+                    <div class="service-icon">🔌</div>
+                    <h3>Computer Accessories</h3>
+                    <ul>
+                        <li>Monitors & displays</li>
+                        <li>Keyboards, mice & input devices</li>
+                        <li>Cables & adapters</li>
+                        <li>External drives & USB devices</li>
+                        <li>Audio & video equipment</li>
+                    </ul>
+                </div>
+
+                <div class="service-card">
+                    <div class="service-icon">📊</div>
+                    <h3>ERP Systems</h3>
+                    <ul>
+                        <li>Enterprise resource planning implementation</li>
+                        <li>Supply chain management systems</li>
+                        <li>Financial management software</li>
+                        <li>Human resource management systems</li>
+                        <li>Custom ERP solutions & integration</li>
+                    </ul>
+                </div>
+
+                <div class="service-card">
+                    <div class="service-icon">🛠️</div>
+                    <h3>IT Support & Maintenance</h3>
+                    <ul>
+                        <li>Technical support services</li>
+                        <li>System upgrades & optimization</li>
+                        <li>Data backup & recovery</li>
+                        <li>Network setup & configuration</li>
+                        <li>On-site & remote assistance</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Footer -->
     <footer>
         <div class="footer-container">
@@ -258,37 +496,27 @@
 
                 <div class="footer-section">
                     <h4>Quick Links</h4>
-                    <a href="#home">Home</a>
-                    <a href="#distributors">Distributors</a>
-                    <a href="#products">Products & Services</a>
-                    <a href="#security">Security</a>
+                    <a href="index.html">Home</a>
+                    <a href="index.html#distributors">Distributors</a>
+                    <a href="index.html#products">Products & Services</a>
+                    <a href="index.html#security">Security</a>
                     <a href="about.html">About Us</a>
                     <a href="contact.html">Contact</a>
                 </div>
 
                 <div class="footer-section">
                     <h4>Services</h4>
-                    <a href="#products">Industrial Equipment</a>
-                    <a href="#security">Physical Security</a>
-                    <a href="#security">Cyber Security</a>
-                    <a href="#products">Training & Consultancy</a>
-                    <a href="#products">Mining Solutions</a>
+                    <a href="index.html#products">Industrial Equipment</a>
+                    <a href="index.html#security">Physical Security</a>
+                    <a href="index.html#security">Cyber Security</a>
+                    <a href="index.html#chemicals">Industrial Chemicals</a>
+                    <a href="index.html#products">Training & Consultancy</a>
+                    <a href="index.html#products">Mining Solutions</a>
+                    <a href="index.html#it-services">IT Services</a>
                 </div>
 
                 <div class="footer-section">
                     <h4>Contact Info</h4>
-                    <p>Lusaka, Zambia</p>
-                    <a href="mailto:info@beyondsystems.co.zm">info@beyondsystems.co.zm</a>
-                    <a href="tel:+260">+260 XXX XXX XXX</a>
-                </div>
-            </div>
-
-            <div class="copyright">
-                <p>&copy; 2026 Beyond Systems. All rights reserved. | Genuine Products. Local Support. Mining Solutions.</p>
-            </div>
-        </div>
-    </footer>
-
-    <script src="assets/js/main.js"></script>
-</body>
-</html>
+                    <p>Solwezi, Zambia</p>
+                    <a href="/cdn-cgi/l/email-protection#177e7971785775726e787973646e6463727a64397478396d7a"><span class="__cf_email__" data-cfemail="eb82858d84ab898e9284858f9892989f8e8698c58884c59186">[email&#160;protected]</span></a>
+                    <a href="/cdn-cgi/l/email-protection#660c0d071f0f1011075426010b070f0a4805090b"><span class="__cf_email__" data-cfemail="dbb1b0baa2b2adacbae99bbcb6bab2b7f5b
