commit for new code

--- a/about.html
+++ b/about.html
@@ -6,14 +6,10 @@
     <title>About Us - Beyond Systems</title>
     <link rel="icon" type="image/jpeg" href="assets/images/Logo.jpeg">
     <link rel="apple-touch-icon" href="assets/images/Logo.jpeg">
-
-    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;600;700;900&family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
-
-    <!-- Main Stylesheet -->
+    <!-- Global Styles -->
     <link rel="stylesheet" href="assets/css/style.css">
-
-    <!-- About Page Stylesheet -->
+    <!-- About Page Styles -->
     <link rel="stylesheet" href="assets/css/about.css">
 </head>
 <body>
@@ -24,16 +20,23 @@
                 <img src="assets/images/Logo.jpeg" alt="Beyond Systems Logo" class="logo-img">
                 <div class="tagline">Innovative Reliable Solutions</div>
             </div>
-            <div id="hamburger" class="hamburger">&#9776;</div>
-            <ul class="nav-menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="index.html#distributors">Distributors</a></li>
-                <li><a href="index.html#products">Products & Services</a></li>
-                <li><a href="index.html#security">Security</a></li>
-                <li><a href="index.html#chemicals">Chemicals</a></li>
-                <li><a href="index.html#it-services">IT Services</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="contact.html">Contact</a></li>
+            
+            <!-- Hamburger Menu Button -->
+            <button class="hamburger" id="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </button>
+            
+            <ul class="nav-menu" id="navMenu">
+                <li><a href="index.html" class="nav-link">Home</a></li>
+                <li><a href="index.html#distributors" class="nav-link">Distributors</a></li>
+                <li><a href="index.html#products" class="nav-link">Products & Services</a></li>
+                <li><a href="index.html#security" class="nav-link">Security</a></li>
+                <li><a href="index.html#chemicals" class="nav-link">Chemicals</a></li>
+                <li><a href="index.html#it-services" class="nav-link">IT Services</a></li>
+                <li><a href="about.html" class="nav-link">About Us</a></li>
+                <li><a href="contact.html" class="nav-link">Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -229,18 +232,11 @@
                 <div class="footer-section">
                     <h4>Contact Info</h4>
                     <p>Solwezi, Zambia</p>
-                    <a href="mailto:info@beyondsystems.com">info@beyondsystems.com</a>
-                    <a href="tel:+260975913592">+260 975 913 592</a>
-                </div>
-            </div>
-        </div>
-        <div class="copyright">
-            <p>&copy; 2026 Beyond Systems. All rights reserved. | Genuine Products. Local Expertise.</p>
-        </div>
-    </footer>
-
-    <!-- JavaScript -->
-    <script type="module" src="assets/js/main.js"></script>
-    <script type="module" src="assets/js/about.js"></script>
+                    <a href="/cdn-cgi/l/email-protection#cca5a2aaa38caea9b5a3a2a8bfb5bfb8a9a1bfe2afa3e2b6a1"><span class="__cf_email__" data-cfemail="533a3d353c1331362a3c3d37202a2027363e207d303c7d293e">[email&#160;protected]</span></a>
+                    <a href="/cdn-cgi/l/email-protection#0f65646e766679786e3d4f68626e6663216c6062"><span class="__cf_email__" data-cfemail="5c36373d25352a2b3d6e1c3b313d3530723
+    <!-- Global JavaScript -->
+    <script src="assets/js/main.js"></script>
+    <!-- About Page JavaScript -->
+    <script src="assets/js/about.js"></script>
 </body>
 </html>
