--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/jpeg" href="assets/images/Logo.jpeg">
     <link rel="apple-touch-icon" href="assets/images/Logo.jpeg">
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;600;700;900&family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
+    <!-- Global Styles -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -17,15 +18,23 @@
                 <img src="assets/images/Logo.jpeg" alt="Beyond Systems Logo" class="logo-img">
                 <div class="tagline">Innovative Reliable Solutions</div>
             </div>
-            <ul class="nav-menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="index.html#distributors">Distributors</a></li>
-                <li><a href="index.html#products">Products & Services</a></li>
-                <li><a href="index.html#security">Security</a></li>
-                <li><a href="index.html#chemicals">Chemicals</a></li>
-                <li><a href="index.html#it-services">IT Services</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="contact.html">Contact</a></li>
+            
+            <!-- Hamburger Menu Button -->
+            <button class="hamburger" id="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </button>
+            
+            <ul class="nav-menu" id="navMenu">
+                <li><a href="index.html" class="nav-link">Home</a></li>
+                <li><a href="index.html#distributors" class="nav-link">Distributors</a></li>
+                <li><a href="index.html#products" class="nav-link">Products & Services</a></li>
+                <li><a href="index.html#security" class="nav-link">Security</a></li>
+                <li><a href="index.html#chemicals" class="nav-link">Chemicals</a></li>
+                <li><a href="index.html#it-services" class="nav-link">IT Services</a></li>
+                <li><a href="about.html" class="nav-link">About Us</a></li>
+                <li><a href="contact.html" class="nav-link">Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -518,5 +527,18 @@
                 <div class="footer-section">
                     <h4>Contact Info</h4>
                     <p>Solwezi, Zambia</p>
-                    <a href="/cdn-cgi/l/email-protection#177e7971785775726e787973646e6463727a64397478396d7a"><span class="__cf_email__" data-cfemail="eb82858d84ab898e9284858f9892989f8e8698c58884c59186">[email&#160;protected]</span></a>
-                    <a href="/cdn-cgi/l/email-protection#660c0d071f0f1011075426010b070f0a4805090b"><span class="__cf_email__" data-cfemail="dbb1b0baa2b2adacbae99bbcb6bab2b7f5b
+                    <a href="mailto:jkayivwa2@gmail.com">jkayivwa2@gmail.com</a>
+                    <a href="tel:+260975913592">+260 975 913 592</a>
+                </div>
+            </div>
+
+            <div class="copyright">
+                <p>&copy; 2026 Beyond Systems. All rights reserved. | Genuine Products. Local Support. Mining Solutions.</p>
+            </div>
+        </div>
+    </footer>
+
+    <!-- Global JavaScript -->
+    <script src="assets/js/main.js"></script>
+</body>
+</html>
