--- a/contact.html
+++ b/contact.html
@@ -106,7 +106,7 @@
                 <!-- Contact Information -->
                 <div class="contact-info-container">
                     <h2>Get In Touch</h2>
-                    <p>We're here to help with all your mining solutions needs. Reach out to us through any of the following channels:</p>
+                    <p>We're here to provide solutions for all your mining needs. Reach out to us through any of the following channels:</p>
 
                     <div class="contact-details">
                         <div class="contact-detail-item">
